--- a/styles.css
+++ b/styles.css
@@ -7,23 +7,44 @@ body {
 }
 
 h1 {
-    padding: 20px 0;
+    padding: 15px 0;
+    font-size: 1.8rem;
 }
 
-canvas{
+.healthBar{
     height: 8px;
     width: 100px;
     border: 1px solid black;
-    background: #eee;
+    background: transparent;
+    margin: 0;
+    display: inline-block;
+}
+
+#healthBarStat {
+    width: 100px;
+    height: 8px;
+    background-color: green
+}
+
+#happinessBarStat {
+    width: 50px;
+    height: 8px;
+    background-color: green
+}
+
+#hungerBarStat {
+    width: 0px;
+    height: 8px;
+    background-color: green;
 }
 
 #petPic img {
-    height: 250px;
+    height: 150px;
     margin: 10px 0;
 }
 
 #messageBox{
-    width: 20%;
+    width: 30%;
     margin: 0 auto;
     text-align: left;
     background-color: #ffD026;
@@ -31,9 +52,10 @@ canvas{
 }
 
 #banner{
-    height: 15vh;
+    height: 10vh;
     background-color: #FFD026;
 }
+
 #banner img{
     height: 100%;
 }
@@ -48,9 +70,6 @@ button:hover {
     background-color: #c7a21b;
 }
 
-button:disabled {
-    color: #555;
-}
 
 ul {
     width: 20%;
@@ -59,7 +78,11 @@ ul {
     list-style-type:none;
 }
 
+li{
+    display: inline-block;
+}
+
 li, button {
-    margin-top: 10px;
-    margin-bottom: 10px; 
+    margin-top: 3px;
+    margin-bottom: 3px; 
 }
